repaired the contact form inputs on mobile mode

--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -42,6 +42,7 @@ form {
   }
   input, textarea {
     border-radius: 0;
+    padding: 0;
     outline: none;
     width: 100%;
     min-width: 100%;
@@ -56,10 +57,10 @@ form {
     }
   }
   .reset {
-    font-family: 'Lato', sans-serif;
     display: flex;
     justify-content: flex-end;
     input[type=reset] {
+      font-family: 'Lato', sans-serif;
       background: none;
       border: none;
       margin-top: 0.5em;
